# rmc_software_2017

./: .gitignore  CMakeLists.txt  README.md  installEDT.bash
LunArena2/: HOW_TO_SETUP.txt  manifest.xml
LunArena2/meshes/: arena_base_link.DAE  soil_link.DAE  whole_base.dae
ar_sys/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
ar_sys/camera_info/: camera_calibration.yaml
ar_sys/data/multi/: board1.yml  board2.yml  boards.yml
ar_sys/data/viewer/: map.yml  viewer.rviz
ar_sys/include/ar_sys/: utils.h
ar_sys/include/aruco/: marker.h
ar_sys/launch/: multi-boards.launch  single_board.launch  system_viewer.launch  test.launch
ar_sys/src/: multi_boards.cpp  single_board.cpp  system_viewer.cpp  utils.cpp
base_controller/: CMakeLists.txt  package.xml  start.launch
base_controller/src/: conversion.cpp  edcs_driver.cpp  joystick_teleop.cpp  motor_controller.cpp  odometry.cpp  rbtq_msg_conv.cpp  roboteq_driver.cpp  roboteq_driver.cpp.orig
base_controller/src/serialDriver/: CMakeLists.txt  DataLogger.cpp  DataLogger.h  Exception.cpp  Exception.h  Mutex.cpp  Mutex.h  OutputConsole.h  SerialPort.cpp  SerialPort.h  Thread.cpp  Thread.h  log.kdev4
kevzak_mc_encoder/: CMakeLists.txt  package.xml
kevzak_mc_encoder/src/: encoder.cpp
mission_control/: arenawindow.cpp  arenawindow.h  arenawindow.ui  broadcastudp.cpp  broadcastudp.h  inputThrottler.cpp  inputThrottler.h  joystickconnector.cpp  joystickconnector.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mission_control.pro  mission_control.pro.user.8838005  resources.qrc  statsMonitor.cpp  statsMonitor.h  tcpSender.cpp  tcpSender.h  udpSender.cpp  udpSender.h  videoconnector.cpp  videoconnector.h
mission_control_old/: .gitignore  commonhdr.h  inputThrottler.h  joystickconnector.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mission_control.pro  statsMonitor.h  tcpSender.cpp  tcpSender.h  udpSender.h
ml/: CMakeLists.txt  package.xml  setup.py
ml/src/ml/: svm.py
navigation/maskor_navigation/sbpl_lattice_planner/: CMakeLists.txt
navigation/pose_follower/: CMakeLists.txt  package.xml
navigation/pose_follower/src/: pose_follower.cpp
navigation/pose_follower/srv/: SetMaxVelocity.srv
rmcDecode/: main.cpp  rmcData.cpp  rmcData.h  rmcDecode.pro  rmcEnDecoder.cpp  rmcEnDecoder.h
rmc_2dnav/: global_costmap_params.yaml  move_base.launch  package.xml
rmc_2dnav/config/: base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  pose_follower_params.yaml  pose_follower_params.yaml~
rmc_2dnav/launch/: ar_sys_19cm.launch  control.launch  description.launch  ekf_localization.launch  ekf_localization_1.launch  ekf_localization_1_test.launch  ekf_localization_2.launch  full-launch-v1-final.launch  kinect.launch  move_base2.launch  navigation.launch  robot.launch  rtabmap-with-odom-tf.launch  rtabmap.launch  sensors.launch  static_transforms.launch
rmc_2dnav/launch/sensors/: arbotix.launch  aruco_with_servo_and_camera.launch  kinect-freenect-bad.launch  kinect.launch  localization.launch  microstrain-imu.launch  sensors-old.launch  sensors.launch  servo_and_camera.launch
rmc_2dnav/launch/test/: camera_usb_test.launch  localization_test.launch
rmc_2dnav/maps/: edt_test_arena-rotated.pgm  edt_test_arena.pgm  edt_test_arena.yaml  rmc-2016-arena.pgm  rmc-2016-arena.yaml  rmc_arena_5cm.yaml
rmc_config/yaml/: arbotix.yaml  goalpoints.yaml  waypoints-edt-arena.yaml  waypoints-nasa-arena.yaml  waypoints.yaml
rmc_controller/: CMakeLists.txt  package.xml  start.launch
rmc_controller/src/: edcs_driver_test.cpp  motor_calibrator_script.cpp  odometry_example.cpp  roboteq_driver.cpp
rmc_controller/src/serialDriver/: OutputConsole.cpp  RemoteConsole.cpp  RemoteConsole.h  Time.cpp  Time.h  main.cpp
rmc_simulation/: CMakeLists.txt  model.config  package.xml  rmc_simulation.sdf
rmc_simulation/launch/: display.launch  gazebo.launch
rmc_simulation/meshes/: left_back_wheel_link.STL  left_bot_front_link.STL  left_front_wheel_link.STL  left_mid_wheel_link.STL  right_bot_front_link.STL  right_bot_link.STL  right_mid_wheel_link.STL
rmc_simulation/robots/: rmc_simulation.URDF
rmc_simulation/worlds/: LunArena.world
robot_setup_tf/: CMakeLists.txt.orig
robot_setup_tf/src/broadcaster/: tf_broadcaster.cpp
simple_navigation_goals/: package.xml
simulation/LunArena2/meshes/: arena_base_link.STL  dumping_bin_link.DAE  dumping_bin_link.STL  marker_link.DAE  marker_link.STL  soil_link.STL
simulation/rmc_simulation/: CMakeLists.txt  package.xml  rmc_simulation.sdf
simulation/rmc_simulation/launch/: gazebo-naked.launch  gazebo-rigid.launch  gazebo.launch  jackal_world.launch
simulation/rmc_simulation/meshes/: base_link.STL  left_bot_back_link.STL  left_bot_link.STL  left_top_link.STL  rear_rocker_link.STL  right_back_wheel_link.STL  right_bot_back_link.STL  right_front_wheel_link.STL  right_top_link.STL
simulation/rmc_simulation/robots/: rmc_simulation.URDF
simulation/rmc_simulation/sdf/: rmc_simulation_rigid.sdf  rmc_simulation_rigid_naked.sdf
state_machine/: CMakeLists.txt  package.xml
state_machine/include/: encoderPolling.h  mission_validator.h  servo_controller.h  state_machine.h
state_machine/launch/: encoderPolling.launch  newLaunch.launch  posePub.launch  state_machine.launch
state_machine/msg/: SensorStatus.msg
state_machine/scripts/: createLaunch.py
state_machine/src/: state_machine.cpp
state_machine/src/encoder/: encoderPolling.cpp  main.cpp
state_machine/src/missionValidator/: main.cpp  mission_validator.cpp
state_machine/src/posePublisher/: posePublisher.cpp
state_machine/src/serialInterface/: serialInterface.cpp
state_machine/src/servoController/: servo_controller.cpp  servo_main.cpp
state_machine/src/simMachine/: sim_machine.cpp
state_machine/src/stateMachine/: copyMachine.cpp  main.cpp  state_copy.cpp  state_machine.cpp  temp.cpp
state_machine/srv/: '  ValidateSensors.srv
testing/: socket_server.py
vision/launch/: blackfly.launch  usb_480_aruco.launch  usb_480_aruco2.launch
vision/misc/aruco_data/: 17cm_boardrmc.yml  (+2 more)
(+7 files in other folders)
